<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- action bar strings -->
    <string name="app_name">Crumbs Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>

    <!-- test strings -->
    <string name="hello_world">Hello world!</string>

    <!-- login strings -->
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="signin_or_register">SIGN IN</string>
    <string name="login_as_guest">GUEST</string>

    <!-- register strings -->
    <string name="r_registration">Register</string>
    <string name="r_username">Username</string>
    <string name="r_password">Password</string>
    <string name="r_email">Email</string>
    <string name="r_first_name">First Name</string>
    <string name="r_last_name">Last Name</string>
    <string name="r_gender">Gender</string>
    <string name="r_city">City</string>
    <string name="r_state">State</string>

    <!-- map strings -->
    <string name="button_1">Profile</string>
    <string name="button_2">My Crumbs</string>
    <string name="button_3">Add Crumb</string>
    <string name="button_find_text">Find</string>
    <string name="edittext_hint_location">Enter location</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- setting strings -->
    <!-- entry listings for ListPreference in preferences.xml -->
    <array name="listentries">
        <item>sample entry 1</item>
        <item>sample entry 2</item>
    </array>
    <array name="listvalues">
        <item>sample value 1</item>
        <item>sample value 2</item>
    </array>
    <string name="title_activity_add_crumb">Add A New Crumb</string>
    <string name="title_activity_my_crumbs">My Crumbs</string>

    <!-- facebook app id string -->
    <string name="app_id">1415878208713851</string>
    <string name="title_activity_edit_crumb">Edit A Crumb</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_crumb_details">Crumb Details</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_rankings">Rankings</string>
</resources>
