<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="#2A3F49"
    android:orientation="vertical"
    android:id="@+id/activity_login">

    <!-- the action bar is already included, it's just not shown in the preview
 
-->
    <!-- action bar appears when program is run on a device -->

    <Button
        android:id="@+id/signin_or_register"
        android:background="@drawable/button_style"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/signin_or_register"
        android:textColor="#FFFFFF"
        android:onClick="signInOrRegister"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/whiteRec"
        android:layout_alignLeft="@+id/whiteRec"
        android:layout_alignStart="@+id/whiteRec" />

    <Button
        android:id="@+id/login_as_guest"
        android:background="@drawable/button_style"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/login_as_guest"
        android:textColor="#FFFFFF"
        android:onClick="loginAsGuest"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_below="@+id/signin_or_register"
        android:layout_alignLeft="@+id/signin_or_register"
        android:layout_alignStart="@+id/signin_or_register"
        android:layout_marginTop="15dp"
        android:layout_alignRight="@+id/signin_or_register"
        android:layout_alignEnd="@+id/signin_or_register" />


    <ImageView
        android:id="@+id/whiteRec"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:src="@drawable/white_rectangle"
        android:layout_alignTop="@+id/enter_username"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/enter_password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@null"
        android:hint="@string/enter_password"
        android:gravity="center"
        android:layout_below="@+id/enter_username"
        android:layout_alignLeft="@+id/enter_username"
        android:layout_alignStart="@+id/enter_username" />

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:hint="@string/enter_username"
        android:gravity="center"
        android:layout_marginTop="162dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Create an account"
        android:textColor="#FFFFFF"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/login_as_guest"
        android:layout_alignStart="@+id/login_as_guest"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Forgot your password?"
        android:textColor="#FFFFFF"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/login_as_guest"
        android:layout_alignEnd="@+id/login_as_guest" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:id="@+id/imageView2"
        android:background="@drawable/crumbs_logo"
        android:layout_above="@+id/whiteRec"
        android:layout_centerHorizontal="true" />

</RelativeLayout>